# tinyfocus-server

./: .gitignore  README.md  app.py  pyproject.toml  setup.py  start-server.sh
mock_arduino/: mock.py
tinyfocus/: __init__.py  app.py  arduino_connection.py  arduino_serial.py  mock.py
